# Advanced-Agentic-Multimodal-RAG

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.ollama  EC2-deployment-steps.txt  README.md  astra_index_records.db  commands.md  docker-compose-all-services.yml  docker-compose.prod.yml  docker-compose.prodN.yml  docker-compose.yml  pyproject.toml  readme.txt  render.yaml  requirements.txt  requirements_new.txt  test.ipynb
models/qwen2.5vl/: 3b
nginx/: default.conf
ngnix/: default.conf
src/: astra_index_records.db  docker-compose.prod.yaml  logger_config.py  run_manager.py
src/.github/workflows/: deploy.yaml
src/backend/: Adding_files.py  DB.py  Dockerfile  Image_processing_disk.py  __init__.py  agent.py  chunking_retrieveing.py  file_handler.py  hybrid_docx_parser.py  hybrid_excel_parser.py  hybrid_pdf_parser.py  hybrid_pptx_parser.py  hybrid_text_csv_json.py  image_processing_bytes.py  main.py  parser.py  rag_pipeline.py  requirements.txt  utilis.py
src/frontend/: Dockerfile  app.py  requirements.txt  test1.py
src/models/: __init__.py  clip_model.py  euri.py
src/nginx/: default.conf
