[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Agentic_Advanced_RAG_chat_bot"
version = "0.1.0"
description = "An advanced Retrieval-Augmented Generation (RAG) chatbot with agentic capabilities"
license = "MIT"
authors = [
    { name = "Chetan Fernandis", email = "chetanfern2@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "astrapy==2.1.0",
    "langchain_astradb==1.0.0",
    "langchain_community==0.4.1",
    "langchain_core==1.0.2",
    "langsmith==0.4.38",
    "numpy==2.2.6",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "Pillow==11.0.0",
    "python-dotenv==1.2.1",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "requests==2.32.5",
    "streamlit==1.49.1",
    "torch==2.8.0+cu126",
    "unstructured==0.14.5"

]

[tool.setuptools.packages.find]
where = ["src"] 

# Optional dependencies (useful for Git-based installs)
[project.optional-dependencies]
extras = [
    "clip @ git+https://github.com/openai/CLIP.git"
]

